[package]
name = "rce"
version = "0.1.0"
authors = ["Șerban Robu <serbanrobu@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-bincode = "0.6"
bincode = "1.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }
